# descriptor_buffer_layer

./: .gitignore  CMakeLists.txt  README.md  build_android_arm64.sh  build_linux_i86.sh  build_linux_x86_64.sh  libdescriptor_buffer_layer.json  libdescriptor_buffer_layer.json.in  libdescriptor_buffer_layer32.json.in  mali.json
.github/workflows/: android.yml
src/: buffer.cpp  buffer.hpp  command_buffer.cpp  command_buffer.hpp  descriptor_buffer.cpp  descriptor_buffer.hpp  descriptors.cpp  descriptors.hpp  layer.cpp  layer.hpp  logger.cpp  logger.hpp  mali_gpu_profiler.cpp  mali_gpu_profiler.hpp  pipeline_state.cpp  pipeline_state.hpp  pipelines.cpp  pipelines.hpp  queue.cpp  queue.hpp  staging_resources.cpp  staging_resources.hpp  vk_func.cpp  vk_func.hpp
src/vulkan/: vk_layer.h
